# storyteller

./: .gitignore  README.md  cli.py  generate.py  main.py  models.py  pyproject.toml  weights.example.json
assets/: README.md  asset_descriptions.json
data/: events_schema.md  match_data.json
preview/: index.html
schema/: story.schema.json
templates/: AI_USAGE.md  DECISIONS.md  EVALS.md
tests/: invariants.md  test_main.py
