[project]
name = "junior-project-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jsonschema>=4.25.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
